--- a/css/xbdq.css
+++ b/css/xbdq.css
@@ -73,39 +73,46 @@ body {
     visibility: hidden;
 }
 
-body.xb,#xb {
+div.xb,#xb {
     background: url(../images/xbdq/xb.png) no-repeat;
     background-size: 100% 100%;
 }
-body.hb,#hb {
+div.hb,#hb {
     background: url(../images/xbdq/hb.png) no-repeat;
     background-size: 100% 100%;
 }
-body.hd,#hd {
+div.hd,#hd {
     background: url(../images/xbdq/hd.png) no-repeat;
     background-size: 100% 100%;
 }
-body.hn,#hn {
+div.hn,#hn {
     background: url(../images/xbdq/hn.png) no-repeat;
     background-size: 100% 100%;
 }
-body.xj,#xj {
+div.xj,#xj {
     background: url(../images/xbdq/xj.png) no-repeat;
     background-size: 100% 100%;
 }
-body.xn,#xn {
+div.xn,#xn {
     background: url(../images/xbdq/xn.png) no-repeat;
     background-size: 100% 100%;
 }
 
-.containers {
+#containers {
     width: 1920px;
     height: 1080px;
     overflow: hidden;
+    /* background: url(../images/xbdq/xbdq-bg.png) no-repeat;
+    background-size: 100% 100%;  */
+    position: relative;
+    
+}
+.containers-son{
+    width: 100%;
+    height: 100%;
     background: url(../images/xbdq/xbdq-bg.png) no-repeat;
     background-size: 100% 100%; 
     position: relative;
-    
 }
 .title {
     position: absolute;
